syntax = "proto3";
package com.proto;
option java_package = "com.proto";
option java_multiple_files = true;

import "google/protobuf/any.proto";

message ProtoBaseResponse {
  google.protobuf.Any payload = 1;
  int32 code = 2;
  string message = 3;
}
