syntax = "proto3";
package com.proto;
option java_package = "com.proto";
option java_multiple_files = true;

import "mutual_messages.proto";

message ProtoGuideDtoList {
  int64 search_id = 1;
  repeated ProtoGuideDto items = 2;
  int64 total_count = 3;
}

message ProtoGuideFilterDto {
  int64 user_id = 1;
  int64 user_telegram_id = 2;
  string from_date = 3;
  string to_date = 4;
  string language_names = 5;
  string region_names = 6;
  string comment = 7;
  bool has_car = 8;
  int32 page = 9;
  int32 page_size = 10;
}

message ProtoGuideSearchNotificationRequestDto {
  int64 search_id = 1;
}

service ProtoGuideSearchService{
  rpc search(ProtoGuideFilterDto) returns (ProtoBaseResponse) {};
  rpc notify(ProtoGuideSearchNotificationRequestDto) returns (ProtoBaseResponse) {};
}